k8s/istio-config/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: demo-app-workload
  namespace: istio-ingress
spec:
  hosts:
    - demo-app.app.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
